# subtick

./: .gitignore  DEMO.md  LICENSE  README.md  TESTNET.md
apps/agents/: README.md  package.json  run.js
apps/agents/src/: agents.js  chain.js  loop.js  protocol.js  state.js  utils.js
apps/game/: LICENSE  README.md  package.json  run.js
apps/game/src/: actions.js  chain.js  ledger.js  loop.js  utils.js
scripts/: bootstrap_validator.sh  failure_test.sh  keygen.sh  start_testnet.sh
scripts/demo/: event-monitor.js  setup-genesis.sh  start-agents.sh  start-game.sh  start-validator.sh
scripts/testnet/: health.sh  metrics-tail.sh  setup.sh  start-all.sh  stop-all.sh
sdk/js/: README.md  package.json
sdk/js/examples/: listen_events.js  public_testnet_smoke.js  real_tx_smoke.js  send_tx_loop.js  smoke.js
sdk/js/src/: client.js  errors.js  events.js  index.js  tx_builder.js
sdk/js/src/wire/: bincode.js  canonical.js
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: python_demo.py  real_tx_smoke.py  smoke.py
sdk/python/subtick_sdk/: __init__.py  bincode.py  canonical.py  client.py  errors.py  events.py  tx_builder.py
web/: README.md  demo.html  demo.js  index.html  main.js  styles.css
